--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^8.1.1",
     "morgan": "~1.9.1",
     "nodemon": "^3.0.3",
+    "request": "^2.88.2",
     "seedgoose": "^2.0.2"
   }
 }
